--- a/nexcore.tool.uml.core.nl/plugin_en_US.properties
+++ b/nexcore.tool.uml.core.nl/plugin_en_US.properties
@@ -1,3 +1,3 @@
 #Properties file for nexcore.tool.uml.core
-Bundle-Vendor = SK C&C
+Bundle-Vendor = SK holdings
 Bundle-Name = NEXCORE UML Core Plug-in
