--- a/nexcore.tool.uml.ui.project.nl/plugin_en_US.properties
+++ b/nexcore.tool.uml.ui.project.nl/plugin_en_US.properties
@@ -1,7 +1,7 @@
 
 Bundle-Name = NEXCORE UML Project Plug-in
 
-Bundle-Vendor = SK C&C
+Bundle-Vendor = SK holdings
 
 classes.merger = Merge class to class
 
