--- a/nexcore.tool.uml.ui.project.nl/plugin_ko_KR.properties
+++ b/nexcore.tool.uml.ui.project.nl/plugin_ko_KR.properties
@@ -1,7 +1,7 @@
 
 Bundle-Name = NEXCORE UML Project Plug-in
 
-Bundle-Vendor = SK C&C
+Bundle-Vendor = SK holdings
 
 classes.merger = \uD074\uB798\uC2A4 \uBCD1\uD569
 
